src/test/deca/context/valid/compatible_types.deca
//Test extrait du poly

//Resultat: 

{
    int x = 2;
    float y = x;
    x=readInt() ;
    println(0.5*(x*x)) ; 
}