src/test/deca/context/invalid/mult_op.deca
//Test pour multiplication

//Resultat: invalid type for arithmetique operation for boolean

{
    float x = 0;
    boolean y;
    x*y ; 
}